k8s/website-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deployment
  namespace: website
spec:
  replicas: 3
  selector:
    matchLabels: 
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website
        image: harbor.theflyingbirds.net/tfb/website:latest
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.1"
            memory: "128Mi"
        ports:
        - name: web
          containerPort: 80
      imagePullSecrets:
      - name: regcred
