k8s/website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: website
  labels:
    app: website
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: website
