k8s/kubernetes-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deploy
  namespace: website
spec:
  replicas: 3
  selector:
    matchLabels: 
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website
        image: nginx
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.1"
            memory: "128Mi"
        ports:
        - name: web
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: website
  labels:
    app: website
spec:
  type: ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort: 80
    protocol: TCP
  selector:
    app: website
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: website-ingress
 namespace: website
 annotations:
   cert-manager.io/cluster-issuer: lets-encrypt
spec:
  tls:
  - hosts:
    - theflyingbirds.net
    secretName: theflyingbirds-prod
  rules:
  - host: theflyingbirds.net
    http:
      paths:
      - backend:
          service:
            name: website-service
            port:
              number: 80
        path: /
        pathType: Prefix
---
apiVersion: v1
kind: Namespace
metadata:
  name: website
